--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,18 @@ footer ul{
 footer ul li{
     margin-bottom: 5px;
 }
+footer ul li a{
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    filter: drop-shadow(2px 2px 2px rgb(161, 160, 160)) ;
+    transition: .3s ease;
+}
+footer ul li a:hover{
+    font-weight: 600;
+    transform: translateY(-2px);
+    color: rgb(255, 0, 0);
+    filter: drop-shadow(4px 4px 4px rgb(255, 255, 255)) ;
+}
 footer .redes{
     display: flex;
     justify-content: space-around;
@@ -72,16 +84,18 @@ footer i{
 }
 footer i:hover{
     color: rgb(255, 0, 0);
-    font-size: 30px;
+    font-size: 25px;
+    transform: translateY(-2px);
     transition: 0.3s;
     filter: drop-shadow(0px 0px 30px rgb(255, 255, 255));
     /* box-shadow: ; */
 }
 .menu:hover{
-    font-size: 20px;
+    transform: translateY(-2px);
     color: white;
     transition: 0.4s;
-    box-shadow: 10px 10px 10px 0 rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(4px 4px 4px rgba(255, 255, 255, 0.732)) ;
+    /* box-shadow: 10px 10px 10px 0 rgba(255, 255, 255, 0.3); */
 }
 .menu {
     /* Aquí aplicamos la misma duración de transición */
@@ -110,7 +124,7 @@ footer i:hover{
     top:0;
     left: 0;
 }
-.container nav a {
+header .container nav a {
     color: red;
     text-decoration: none;
     margin: 0 15px;
@@ -213,7 +227,7 @@ footer i:hover{
     font-weight: bold;
     color: rgb(255, 255, 255);
     border-radius: 5px;
-    border: 2px solid red;
+    border: 2px solid rgb(0, 0, 0);
     box-shadow: 10px 10px 10px 0 rgba(0, 0, 0, 0.3);
     transition-duration: .2s;
 }
@@ -274,6 +288,7 @@ footer i:hover{
     box-shadow: 10px 10px 10px 0 rgba(83, 83, 83, 0.3);
 }
 #galeria .cuadrado_perfecto:hover img{
+    transform: translateY(-3px);
     filter: grayscale(0);
     box-shadow: 10px 10px 10px 0 rgba(0, 0, 0, 0.3);
     transition: 0.3s;
